# gscam

./: CMakeLists.txt  package.xml
include/gscam/: gscam.h  gscam.hpp  jetson_gpio.h
src/: gscam.cpp  jetson_gpio.cpp
